fix all docs for two replaced sources

--- a/docs/language/sentences.mdx
+++ b/docs/language/sentences.mdx
@@ -140,7 +140,7 @@ or any other contextual cues.
     <p>(noyo) (li gô) hoî ôfo.&emsp;<em>I am here.</em></p>
     <p>(nîmû) (li gô) hoî zik?&emsp;<em>Where are you?</em></p>
     <p>(noyo) (li gô) bi cônkôk hoî ôfo.&emsp;<em>Right here.</em></p>
-    <p>(nîmû) (li gô) oxon zik dên noyo?&emsp;<em>Why are you against me?</em></p>
+    <p>(nîmû) (li gô) til zik dên noyo?&emsp;<em>Why are you against me?</em></p>
     <p>(noyo) (li gô) nênko fos noyo kôî li gô (misli ulyô).&emsp;<em>Because I can be.</em></p>
 </HisyeoTabs>
 
@@ -205,7 +205,7 @@ A compound–complex sentence (or complex–compound sentence) consists of multi
 independent clauses, at least one of which has at least one dependent clause.
 
 <HisyeoTabs>
-    <p>nîo li sî nô oxon xe ogolol ônî dûngo nênko fos ondo sî côûfon bitûn oxon kon mokon, bînê zowo mokon sî côûfon nîo.&emsp;<em>He went to grab a fork because dinner was ready to eat and then the dog ate his meal.</em></p>
+    <p>nîo li sî nô til xe ogolol ônî dûngo nênko fos ondo sî côûfon bitûn til kon mokon, bînê zowo mokon sî côûfon nîo.&emsp;<em>He went to grab a fork because dinner was ready to eat and then the dog ate his meal.</em></p>
     <p>noyo sûko yôk ûnfûnô lêkin û noyo ke mokon ni hôn fos noyo bît buswen (xe tûu ni).&emsp;<em>I don't like vegetables but I'll eat them if I have to.</em></p>
     <p>umo wohî onô xe sûn dûî zomo îlê xokôn cok, xokûlû sî noyo hoî hêlxun eswen bînê noyo xokûlû nîo bi dukwêlit.&emsp;<em>The woman from two blocks down called me earlier so I called her back.</em></p>
 </HisyeoTabs>
