--- a/docs/language/word_types/determiners.mdx
+++ b/docs/language/word_types/determiners.mdx
@@ -105,7 +105,7 @@ cardinal number).
 
 <HisyeoTabs>
   <p>niswî sûtûô li cok sûn zomo.&emsp;<em>"Three friends are leaving the group."</em></p>
-  <p>nûs buswen niswî dus tîû êfun oxon xe bîek ni sûît ôfo.&emsp;<em>"We need 35 minutes to bake this cake."</em></p>
+  <p>nûs buswen niswî dus tîû êfun til xe bîek ni sûît ôfo.&emsp;<em>"We need 35 minutes to bake this cake."</em></p>
 </HisyeoTabs>
 
 Providing a quantity determiner of "one" (<HisyeoWord is='kut'/>) can be used as a kind of
@@ -191,7 +191,7 @@ exact numerical quantity the noun actually is.
   <p><strong>higher/more:</strong>&emsp;li eswen tolîko yê xe tûu ôfo, en fos noyo kôî tûek tô kut.&emsp;<em>"There are more ways to xe this than I can count."</em></p>
   <p><strong>lower/fewer:</strong>&emsp;li mênûs umo hoî ôfo bi îbûdû.&emsp;<em>"There are less people here now."</em></p>
   <p><strong>low/some:</strong>&emsp;yoûtî umo sûko kon mûhoyon.&emsp;<em>"Some people like camping."</em></p>
-  <p><strong>lowest/least:</strong>&emsp;noyo bi tôlkî fuî zôtêstô oxon xe cifû mênûs cino yê niwos en môî.&emsp;<em>I can only afford to pay the least of the bills.</em></p>
+  <p><strong>lowest/least:</strong>&emsp;noyo bi tôlkî fuî zôtêstô til xe cifû mênûs cino yê niwos en môî.&emsp;<em>I can only afford to pay the least of the bills.</em></p>
   <p><strong>zero/none:</strong>&emsp;xûnyu yê dûî umo li sumon.&emsp;<em>No two people are the same.</em></p>
 </HisyeoTabs>
 
