--- a/docs/language/word_types/nouns.mdx
+++ b/docs/language/word_types/nouns.mdx
@@ -205,7 +205,7 @@ differentiation and causation). In linguistics, this is sometimes referred to as
   <p>nîo li sî cok hoî lono xobêk sûn sinsî Xikogô.&emsp;<em>He departed yesterday from Chicago.</em></p>
   <p>kûu bono bi elentêt sûn bêlêtê.&emsp;<em>Face away from the wall!</em></p>
   <p>lono kon wêloi sûn suhot eson mût suhot tîû.<em>The working day runs from 9 am to 5 pm.</em></p>
-  <p>kôî wedo oxon doînbî sûn lono dus xêtî yê wuto xêtî.&emsp;<em>Tickets are available from 17th July.</em></p>
+  <p>kôî wedo til doînbî sûn lono dus xêtî yê wuto xêtî.&emsp;<em>Tickets are available from 17th July.</em></p>
   <p>dûstu tônkô nîmû sûn kut mût dus.&emsp;<em>Rate your pain from 1 to 10.</em></p>
   <p>kûu socok xe kôto mîkdol sûn kut.&emsp;<em>Start counting from 1.</em></p>
   <p>nîmû kôî bêûdo ozûul sûn sôhoûk mût kon cukto.&emsp;<em>You can study anything from math to literature.</em></p>
@@ -223,7 +223,7 @@ source or origin that is something other than the marked noun phrase.
 
 ### Beneficiary or Purpose
 
-The <HisyeoWord is='oxon'/> particle precedes this noun phrase.
+The <HisyeoWord is='til'/> particle precedes this noun phrase.
 
 This role is used for noun phrases that represent for whose benefit the action occurs or
 the reason for the action. In English, this represents some of the senses of the
@@ -233,7 +233,7 @@ case.
 :::info The many faces of the English "for"
 
 There are many varying uses of the English word "for" and they don't all line up
-under <HisyeoWord is='oxon'/> so we've included an in-depth walkthrough of most
+under <HisyeoWord is='til'/> so we've included an in-depth walkthrough of most
 of the interpretations that are in the [wiktionary
 entry](https://en.wiktionary.org/wiki/for). The translations represent the
 proper way to formulate the desired semantic meaning.
@@ -246,30 +246,30 @@ proper way to formulate the desired semantic meaning.
 </HisyeoTabs>
 2. ✅ Directed at; intended to belong to.
 <HisyeoTabs>
-  <p>noyo fuî uyo oxon nîmû&emsp;<em>I have something for you.</em></p>
+  <p>noyo fuî uyo til nîmû&emsp;<em>I have something for you.</em></p>
 </HisyeoTabs>
 3. ✅ In order to help, benefit, gratify, honor etc. (someone or something). 
 <HisyeoTabs>
-  <p>hôn môî uyo fos noyo tûu, û noyo tûu oxon nîmû.&emsp;<em>Everything I do, I do for you.</em></p>
-  <p>nûs fuî kôndodû yê lono kon lôzîc oxon umo Zêenit.&emsp;<em>We're having a birthday party for Janet.</em></p>
-  <p>ônî bôklôn cûdo sî kôto in ondo oxon kôndodû kon cûdo yôûlî.&emsp;<em>The mayor gave a speech for the charity gala.</em></p>
+  <p>hôn môî uyo fos noyo tûu, û noyo tûu til nîmû.&emsp;<em>Everything I do, I do for you.</em></p>
+  <p>nûs fuî kôndodû yê lono kon lôzîc til umo Zêenit.&emsp;<em>We're having a birthday party for Janet.</em></p>
+  <p>ônî bôklôn cûdo sî kôto in ondo til kôndodû kon cûdo yôûlî.&emsp;<em>The mayor gave a speech for the charity gala.</em></p>
 </HisyeoTabs>
 4. ✅ Befitting of someone’s beliefs, needs, wants, skills, or tastes; best suited to.
 <HisyeoTabs>
-  <p>hôn fos xe wêko mokon hoî zuko bi dûndon, li eswen en fos nîmû kôî tûu, bînê wêloi ôfo oxon yôk nîmû.&emsp;<em>If having to bag the groceries correctly is more than you can handle, then this isn't the job for you.</em></p>
+  <p>hôn fos xe wêko mokon hoî zuko bi dûndon, li eswen en fos nîmû kôî tûu, bînê wêloi ôfo til yôk nîmû.&emsp;<em>If having to bag the groceries correctly is more than you can handle, then this isn't the job for you.</em></p>
 </HisyeoTabs>
 5. ✅ To be used or treated in a stated way, or with a stated purpose.
 <HisyeoTabs>
-  <p>ôfo li gongoxî ûlôgun nêôs oxon oûtô gîsgûl noyo.&emsp;<em>This is a new bell for my bicycle.</em></p>
-  <p>bîek sûît onô oxon kôndodû yê ûsên dizêl yê umo Tomu ûn Helen.&emsp;<em>The cake is for Tom and Helen's anniversary.</em></p>
-  <p>kûôxi ôfo hoî ôfo oxon xe mokon. dîzel oxon xe li êo fonmot.&emsp;<em>These apples here are for eating. The rest are for throwing away.</em></p>
+  <p>ôfo li gongoxî ûlôgun nêôs til oûtô gîsgûl noyo.&emsp;<em>This is a new bell for my bicycle.</em></p>
+  <p>bîek sûît onô til kôndodû yê ûsên dizêl yê umo Tomu ûn Helen.&emsp;<em>The cake is for Tom and Helen's anniversary.</em></p>
+  <p>kûôxi ôfo hoî ôfo til xe mokon. dîzel til xe li êo fonmot.&emsp;<em>These apples here are for eating. The rest are for throwing away.</em></p>
 </HisyeoTabs>
 6. ✅ Supporting, in favour of. (Antonym: against)
 <HisyeoTabs>
-  <p>noî môî umo xe oxon bêsnêhot, kûu li êo nô bi mulô ôlê zûngô nîmû.&emsp;<em>All those for the motion, raise your hands.</em></p>
-  <p>zik oxon mozûn bukû.&emsp;<em>Who's for ice-cream?</em></p>
-  <p>noyo oxon xe li nô tô oûtô kîskô.&emsp;<em>I'm for going by train.</em></p>
-  <p>dus gôcîdon sî oxon ûn niswî dên.&emsp;<em>Ten voted for, and three against. (with implied object)</em></p>
+  <p>noî môî umo xe til bêsnêhot, kûu li êo nô bi mulô ôlê zûngô nîmû.&emsp;<em>All those for the motion, raise your hands.</em></p>
+  <p>zik til mozûn bukû.&emsp;<em>Who's for ice-cream?</em></p>
+  <p>noyo til xe li nô tô oûtô kîskô.&emsp;<em>I'm for going by train.</em></p>
+  <p>dus gôcîdon sî til ûn niswî dên.&emsp;<em>Ten voted for, and three against. (with implied object)</em></p>
 </HisyeoTabs>
 7. ⛔ Because of. 
 <HisyeoTabs>
@@ -279,8 +279,8 @@ proper way to formulate the desired semantic meaning.
 </HisyeoTabs>
 8. ✅ Intended to cure, remove or counteract; in order to cure, remove or counteract.
 <HisyeoTabs>
-  <p>cîgîlsu in mokon oxon hûstun nîmû.&emsp;<em>This medicine is for your cough.</em></p>
-  <p>noyo buswen xe isbulyol nozî hoî niwos oxon mûxî mîtmo nomû.&emsp;<em>I need to spray my house for termites.</em></p>
+  <p>cîgîlsu in mokon til hûstun nîmû.&emsp;<em>This medicine is for your cough.</em></p>
+  <p>noyo buswen xe isbulyol nozî hoî niwos til mûxî mîtmo nomû.&emsp;<em>I need to spray my house for termites.</em></p>
 </HisyeoTabs>
 9. ⛔ Over (a period of time). 
 <HisyeoTabs>
@@ -298,13 +298,13 @@ proper way to formulate the desired semantic meaning.
 </HisyeoTabs>
 12. ✅ On behalf of.
 <HisyeoTabs>
-  <p>noyo wedo cizî oxon nîo.&emsp;<em>I will stand in for him.</em></p>
-  <p>noyo kôto oxon ônî bôklôn wîk.<em>I speak for the Prime Minister.</em></p>
+  <p>noyo wedo cizî til nîo.&emsp;<em>I will stand in for him.</em></p>
+  <p>noyo kôto til ônî bôklôn wîk.<em>I speak for the Prime Minister.</em></p>
 </HisyeoTabs>
 13. ⛔ In the role or capacity of; instead of; in place of.
 <HisyeoTabs>
   <p>noyo yôn dîncî yê kudûdo hûlû misli mîêbil kon conzodo.&emsp;<em>I used a hay bale for a bed.</em></p>
-  <p>nîo fuî ûnfûnô zîzîyo misli fos wedo dûuncît nîo oxon ni.&emsp;<em>He's got a turnip for a brain.</em></p>
+  <p>nîo fuî ûnfûnô zîzîyo misli fos wedo dûuncît nîo til ni.&emsp;<em>He's got a turnip for a brain.</em></p>
 </HisyeoTabs>
 14. ⛔ In exchange for; in correspondence or equivalence with. 
 <HisyeoTabs>
@@ -312,14 +312,14 @@ proper way to formulate the desired semantic meaning.
 </HisyeoTabs>
 15. ✅ In order to obtain or acquire.
 <HisyeoTabs>
-  <p>noyo belêxu oxon mûlû xe hoî kônyêc kûngîyo yê lono cinôbu.&emsp;<em>I am aiming for completion by the end of business Thursday.</em></p>
-  <p>nîo bêûdo oxon cêo yê mulô êto.&emsp;<em>He's going for his doctorate.</em></p>
-  <p>nîmû fôlun xe li nô oxon îskô ûlzo ko.&emsp;<em>xe you want to go for coffee?</em></p>
-  <p>umo xe niwos hoî môî boxô yê kûôcyo Elofo, dîyondê sî umo Delfi oxon zuwobû.&emsp;<em>People all over Greece looked to Delphi for answers.</em></p>
-  <p>nîmû kôî li nô mût gubuyo oxon yoûtî hûwu ko.&emsp;<em>Can you go to the store for some eggs?</em></p>
-  <p>noyo wêko munî bi sôbo oxon oûtô.&emsp;<em>I'm saving up for a car.</em></p>
-  <p>kûu motsi yôk oxon zuwobû.&emsp;<em>Don't wait for an answer.</em></p>
-  <p>nîo sôlû mût nîmû oxon zik.&emsp;<em>What did he ask you for?</em></p>
+  <p>noyo belêxu til mûlû xe hoî kônyêc kûngîyo yê lono cinôbu.&emsp;<em>I am aiming for completion by the end of business Thursday.</em></p>
+  <p>nîo bêûdo til cêo yê mulô êto.&emsp;<em>He's going for his doctorate.</em></p>
+  <p>nîmû fôlun xe li nô til îskô ûlzo ko.&emsp;<em>xe you want to go for coffee?</em></p>
+  <p>umo xe niwos hoî môî boxô yê kûôcyo Elofo, dîyondê sî umo Delfi til zuwobû.&emsp;<em>People all over Greece looked to Delphi for answers.</em></p>
+  <p>nîmû kôî li nô mût gubuyo til yoûtî hûwu ko.&emsp;<em>Can you go to the store for some eggs?</em></p>
+  <p>noyo wêko munî bi sôbo til oûtô.&emsp;<em>I'm saving up for a car.</em></p>
+  <p>kûu motsi yôk til zuwobû.&emsp;<em>Don't wait for an answer.</em></p>
+  <p>nîo sôlû mût nîmû til zik.&emsp;<em>What did he ask you for?</em></p>
 </HisyeoTabs>
 16. ⛔ By the standards of, usually with the implication that those standards are lower than one might otherwise expect; considering.
 <HisyeoTabs>
@@ -337,9 +337,9 @@ proper way to formulate the desired semantic meaning.
 </HisyeoTabs>
 19. ✅ Indicating something desired or anticipated. 
 <HisyeoTabs>
-  <p>oxon nixîn yê tîmîok pipôk.&emsp;<em>O for the wings of a dove.</em></p>
-  <p>oxon nixîn fos li nô tô nu.&emsp;<em>Ah! for wings to soar …</em></p>
-  <p>hôn îbûdû oxon côûfon yê cêo kut ze.&emsp;<em>And now for a slap-up meal!</em></p>
+  <p>til nixîn yê tîmîok pipôk.&emsp;<em>O for the wings of a dove.</em></p>
+  <p>til nixîn fos li nô tô nu.&emsp;<em>Ah! for wings to soar …</em></p>
+  <p>hôn îbûdû til côûfon yê cêo kut ze.&emsp;<em>And now for a slap-up meal!</em></p>
 </HisyeoTabs>
 20. ⛔ (in expressions such as 'for a start') Introducing the first item(s) in a potential sequence .
 <HisyeoTabs>
@@ -348,7 +348,7 @@ proper way to formulate the desired semantic meaning.
 </HisyeoTabs>
 21. ✅ (with names, chiefly US) In honor of; after.
 <HisyeoTabs>
-  <p>somo mût nîo oxon motûo motûo nîo.&emsp;<em>He is named for his grandfather.</em></p>
+  <p>somo mût nîo til motûo motûo nîo.&emsp;<em>He is named for his grandfather.</em></p>
 </HisyeoTabs>
 22. ⛔ (UK) Due for or facing (a certain outcome or fate).
 <HisyeoTabs>
@@ -371,12 +371,12 @@ proper way to formulate the desired semantic meaning.
 </HisyeoTabs>
 26. ✅ (nonstandard) So (that), in order to
 <HisyeoTabs>
-  <p>nîo gomî sî wokût kon wêloi xe gitno lono ûn bitûn, oxon fos nîo kôî dôstoc eswen wokût odigon.&emsp;<em>He took the swing shift for he could get more overtime.</em></p>
+  <p>nîo gomî sî wokût kon wêloi xe gitno lono ûn bitûn, til fos nîo kôî dôstoc eswen wokût odigon.&emsp;<em>He took the swing shift for he could get more overtime.</em></p>
 </HisyeoTabs>
 
 :::
 
-When <HisyeoWord is='oxon'/> is used with the negatitive particle <HisyeoWord is='yôk'/>,
+When <HisyeoWord is='til'/> is used with the negatitive particle <HisyeoWord is='yôk'/>,
 it means that the marked noun phrase is either excluded from being the
 beneficiary/purpose of the committed act of the predicate or that the act itself
 was committed but with a beneficiary/purpose that is something other than the
@@ -563,7 +563,7 @@ In English, this represents some senses of the words "in", "through", or "betwee
 
 <HisyeoTabs>
   <p>noyo kôî mokon wutun hôfezî xe gitno bîek wutun.&emsp;<em>"I could eat a hamburger."</em></p>
-  <p>nûs kûu oûtô gitno tohilôk pûmi onô oxon xe bucono wokût cî.&emsp;<em>"We should drive through the mountains to save time."</em></p>
+  <p>nûs kûu oûtô gitno tohilôk pûmi onô til xe bucono wokût cî.&emsp;<em>"We should drive through the mountains to save time."</em></p>
   <p>nîmû kôî dêko oûtô onô gitno kûmun obokî zonûbî onô ko.&emsp;<em>"Can you see the car through the south window?"</em></p>
   <p>hôn fos gitno nîmû ûn noyo, û hîskûnco in kôson Hîsyêô li xôn môî&emsp;<em>"Between you and me, Hîsyêô is the best conlang."</em></p>
 </HisyeoTabs>
@@ -823,10 +823,10 @@ the preceding phrase is leading to. "for the purpose of", "destined for",
 </HisyeoTabs>
 
 You can clarify this genitive relationship by using a subordinate clause with an
-inner <HisyeoWord is='oxon'/> preposition:
+inner <HisyeoWord is='til'/> preposition:
 
 <HisyeoTabs>
-  <p>tômôs xe (li gô) oxon umo xonluk&emsp;<small>(lit. books that are (existing) for young people)</small></p>
+  <p>tômôs xe (li gô) til umo xonluk&emsp;<small>(lit. books that are (existing) for young people)</small></p>
 </HisyeoTabs>
 
 ---
@@ -838,7 +838,7 @@ attached genitive phrase. "produced by" is an equivalent English expression.
   <p>wôlik yê mokon tût&emsp;<em>"steam produced by the hot food"</em> <small>(lit. smoke/cloud of hot food)</small></p>
 </HisyeoTabs>
 
-You can clarify that a genitive relationship is production by using <HisyeoWord is='oxon'/>:
+You can clarify that a genitive relationship is production by using <HisyeoWord is='til'/>:
 
 <HisyeoTabs>
   <p>wôlik yê kôs yê mokon tût&emsp;<small>(lit. smoke/cloud of result of hot food)</small></p>
@@ -1221,7 +1221,7 @@ outer sentence.
 
 <HisyeoTabs>
   <p>li êo golfon ôlê noyo û <strong>xe</strong> côûfon mîcîn.&emsp;<em>"Cooking fish makes me disgusted."</em></p>
-  <p><strong>xe</strong> golo, li xôn oxon umo xonluk.&emsp;<em>"Reading is good for kids."</em></p>
+  <p><strong>xe</strong> golo, li xôn til umo xonluk.&emsp;<em>"Reading is good for kids."</em></p>
 </HisyeoTabs>
 
 
@@ -1289,7 +1289,7 @@ manner/material thematic role is applied to a *noun clause*, it amends the
 description of the **direct object** as a relative clause.
 
 <HisyeoTabs>
-    <p>bi fos bi ubênus wuîtsî xe ogolol, noyo lunsol sî gundolê nubuso yê zomo onô bi len sumon en fos noyo kôî tûu.&emsp;<em>"Barely keeping a grip on it, I throw the dog's wet ball as hard as I can."</em></p>
+    <p>bi fos bi ubênus wuîtsî xe ogolol, noyo lunsol sî gundolê nubuso yê zomo onô bi gîôn sumon en fos noyo kôî tûu.&emsp;<em>"Barely keeping a grip on it, I throw the dog's wet ball as hard as I can."</em></p>
     <p>bi fos unon îskô cûbû ûn bîek sûn, nûs dênêmêk xe yosten gubuyo kon îskô onô hoî sinsî cûtî onô.&emsp;<em>"Smelling of beer and bread, we searched the small town for the local tavern."</em></p>
     <p>bi xe sityo hoî môtô onô, li zowo xe tô hokôlî ogolol sî siskin wohî nîmû.&emsp;<em>"Sitting by the fire was the dog that bit your sister."</em></p>
 </HisyeoTabs>
