--- a/docs/lessons/religion.mdx
+++ b/docs/lessons/religion.mdx
@@ -106,7 +106,7 @@ more about Unonsî here. Learn more about Unonsî [here](/docs/religion/gods/uno
     <p>û yôn bi nêôs bôsol nucoto. (zûngô dî but mût nucoto)&emsp;<em>The tool reshapes the world. (Hand opens to the world)</em></p>
     <p>tifûlci ûn kon xîûfû, (dûî zûngô mût wîk)&emsp;<em>Innovation and maintenance,</em></p>
     <p>kon fuî fîmôsyôs yê môî kuûnmê, (dûî zûngô mût lozîdô)&emsp;<em>Shared ownership of all technology,</em></p>
-    <p>kônên sumon oxon xokôn kûngîyo yê umo kon wêloi. (dûî zûngô dî but mût nucoto)&emsp;<em>Equal opportunity for every worker council.</em></p>
+    <p>kônên sumon til xokôn kûngîyo yê umo kon wêloi. (dûî zûngô dî but mût nucoto)&emsp;<em>Equal opportunity for every worker council.</em></p>
     <p>lûcku ôfo mût nûs kûu cûdo fôlnî yê êto eswen, (kûu ogolol lûcku dês dêko hoî fôhon kûu cîhun)&emsp;<em>May this lever bring us greater freedom, (Grab an invisible lever in front of you and pull)</em></p>
     <p>hôn xe cînlî zîwit, hôn xe wêîlun bi ozûul cî. (bi dûî kûu ogolol lûcku dês dêko hoî fôhon kûu cîhun)&emsp;<em>to experience life and act any which way. (Twice grab an invisible lever in front of you and pull)</em></p>
 </HisyeoTabs>
@@ -132,7 +132,7 @@ liberation. Learn more about Suluswutî [here](/docs/religion/gods/suluswutî).
 
 <HisyeoTabs>
     <p>dûuncît noyo kûu li lîbû lîtô&emsp;<em>Let my mind be a blank page,</em></p>
-    <p>fos ondo oxon xe dôstoc oxon yôk xe hûkun cî.&emsp;<em>Ready to receive, not to command.</em></p>
+    <p>fos ondo til xe dôstoc til yôk xe hûkun cî.&emsp;<em>Ready to receive, not to command.</em></p>
     <p>û ôîtun noyo kûu li sôlû colot&emsp;<em>Let my voice be a smart question,</em></p>
     <p>xe li êo kônbo ôlê sokofû yê zomî cî.&emsp;<em>That shakes the foundation of society.</em></p>
     <p>noyo kûu yosten yôk zuwobû kônyêc&emsp;<em>Let me not seek a final answer,</em></p>
@@ -167,7 +167,7 @@ is fourteen syllables or seven metrical feet.
 <HisyeoTabs>
     <p>îbûwê bê'ûdo êo. nomû yundô'û.&emsp;<em>The stone teaches. The wood guides.</em></p>
     <p>ûlôgun hûsku fos hoî lîmîen li môtô.— <em>The metal remembers the fire inside.</em></p>
-    <p>ôfo oxon yôk munî—yodo umo solwôc.&emsp;<em>This is not for money, or a lord.</em></p>
+    <p>ôfo til yôk munî—yodo umo solwôc.&emsp;<em>This is not for money, or a lord.</em></p>
     <p>lêkin mût nûs li yôûlî dên yogô kobût lôc.&emsp;<em>Instead, it benefits us against shards.</em></p>
     <p>tô zûngô sînêxîs—tô gûêyû în dîyondê&emsp;<em>With steady hand and a focused eye,</em></p>
     <p>bi mêdûson yê cizî nûs dî cên dî ofînê.&emsp;<em>By our own labor, we intensify.</em></p>
@@ -228,7 +228,7 @@ those lines alone. Learn more about Bostet [here](/docs/religion/gods/bostet).
     <p>hoî fos li kon tônkô, û noyo kûu li cîgîlsu cî&emsp;<em>Where there is pain, let me be the treatment.</em></p>
     <p>hoî fos li kon ôsôlê, û noyo kûu li zûngô sînêxîs cî.&emsp;<em>Where there is fear, let me be the steady hand.</em></p>
     <p>hoî fos li kon cunyû, û noyo kûu li foko tût yoûtî yê môtô cî.&emsp;<em>Where there is cold, let me be the warmth of a fire.</em></p>
-    <p>solîlo li dibo oxon kîso yê wîlûwo êto;&emsp;<em>A body is a vessel for a precious story,</em></p>
+    <p>solîlo li dibo til kîso yê wîlûwo êto;&emsp;<em>A body is a vessel for a precious story,</em></p>
     <p>ni kûu li êo istihol lon fos ni li gîk li zîwit li cok cî.&emsp;<em>Let it be honored in its arriving, in its living, and in its departing.</em></p>
     <p>doî lûok noyo kûu li êo fonmot ôlê kûmun yê lexetko êto&emsp;<em>Let my thread fill a gap in the Great Weave,</em></p>
     <p>xe li êo tût yoûtî ôlê zizime uklo cî.&emsp;<em>That warms the next generation.</em></p>
