--- a/docs/works/mini-words.mdx
+++ b/docs/works/mini-words.mdx
@@ -89,9 +89,9 @@ common compounds that are used in day-to-day speech.
     <p>hobîyô&emsp;<strong>anunsi:</strong> <em>announce, announcement, declare, declaration</em></p>
     <p>xoînbo&emsp;<strong>apara:</strong> <em>seem, appear, apparent, appearance</em></p>
     <p>yoldûn&emsp;<strong>apojo¹:</strong> <em>support, backing</em></p>
-    <p>yoldûn xe oxon umo yodo uyo&emsp;<strong>apojo²:</strong> <em>advocacy</em></p>
-    <p>yoldûn fos oxon mûun eswen okôt&emsp;<strong>apojo³:</strong> <em>backup</em></p>
-    <p>xe li êo len eswen&emsp;<strong>apojo⁴:</strong> <em>bolster</em></p>
+    <p>yoldûn xe til umo yodo uyo&emsp;<strong>apojo²:</strong> <em>advocacy</em></p>
+    <p>yoldûn fos til mûun eswen okôt&emsp;<strong>apojo³:</strong> <em>backup</em></p>
+    <p>xe li êo gîôn eswen&emsp;<strong>apojo⁴:</strong> <em>bolster</em></p>
     <p>mûxî mîtmo xîkô yê fecko côt sûît&emsp;<strong>ara¹:</strong> <em>bee</em></p>
     <p>mûxî xîkô yê kômû ônî dûngo ogogê&emsp;<strong>ara²:</strong> <em>hornet, wasp</em></p>
     <p>buyencok&emsp;<strong>arana:</strong> <em>spider, arachnid</em></p>
@@ -142,7 +142,7 @@ common compounds that are used in day-to-day speech.
     <p>kôtîkôl&emsp;<strong>baraje³:</strong> <em>hinder</em></p>
     <p>bûgot&emsp;<strong>bari:</strong> <em>weight, weigh, heavy</em></p>
     <p>gubuyo&emsp;<strong>basara¹:</strong> <em>market, bazaar, fair</em></p>
-    <p>xe wedo oxon conwêbo&emsp;<strong>basara²:</strong> <em>to shop</em></p>
+    <p>xe wedo til conwêbo&emsp;<strong>basara²:</strong> <em>to shop</em></p>
     <p>sokofû&emsp;<strong>base¹:</strong> <em>base, foundation, floor</em></p>
     <p>fîectu&emsp;<strong>base²:</strong> <em>basis, fundamental</em></p>
     <p>bûmî&emsp;<strong>base³:</strong> <em>ground</em></p>
@@ -333,7 +333,7 @@ common compounds that are used in day-to-day speech.
     <p>bêlêtê&emsp;<strong>fense:</strong> <em>fence, barrier, partition, hedge, fence off</em></p>
     <p>usûndul&emsp;<strong>feo:</strong> <em>ugly</em></p>
     <p>umo mozîkô&emsp;<strong>feri:</strong> <em>fairy, sprite, pixie</em></p>
-    <p>ûlôgun len&emsp;<strong>fero:</strong> <em>iron, steel</em></p>
+    <p>ûlôgun gîôn&emsp;<strong>fero:</strong> <em>iron, steel</em></p>
     <p>kûôxi&emsp;<strong>feruta¹:</strong> <em>fruit</em></p>
     <p>okôt kûôxi&emsp;<strong>feruta²:</strong> <em>bear fruit</em></p>
     <p>kôndodû&emsp;<strong>fete:</strong> <em>party, celebrate</em></p>
@@ -431,7 +431,7 @@ common compounds that are used in day-to-day speech.
     <p>gûlû&emsp;<strong>inja:</strong> <em>wound, injure, injury</em></p>
     <p>mûxi&emsp;<strong>inseto:</strong> <em>insect, bug</em></p>
     <p>gitno&emsp;<strong>inta:</strong> <em>between, inter-</em></p>
-    <p>dûuncît len&emsp;<strong>inteli:</strong> <em>smart, intelligence</em></p>
+    <p>dûuncît gîôn&emsp;<strong>inteli:</strong> <em>smart, intelligence</em></p>
     <p>sunyotni&emsp;<strong>interesa¹:</strong> <em>interest</em></p>
     <p>foko sunyotni&emsp;<strong>interesa²:</strong> <em>interesting</em></p>
     <p>kôs bi tifûlci&emsp;<strong>inventi¹:</strong> <em>invent</em></p>
@@ -962,8 +962,8 @@ common compounds that are used in day-to-day speech.
     <p>xe kôs nukulô&emsp;<strong>pubili¹:</strong> <em>print</em></p>
     <p>xe hobîyô bi fîmôsyôs&emsp;<strong>pubili²:</strong> <em>publish</em></p>
     <p>xe helgo&emsp;<strong>puja¹:</strong> <em>worship, praise</em></p>
-    <p>xe lîûbît bi len&emsp;<strong>puja²:</strong> <em>adore, adoration</em></p>
-    <p>kon lîûbît len&emsp;<strong>puja³:</strong> <em>adoration</em></p>
+    <p>xe lîûbît bi gîôn&emsp;<strong>puja²:</strong> <em>adore, adoration</em></p>
+    <p>kon lîûbît gîôn&emsp;<strong>puja³:</strong> <em>adoration</em></p>
     <p>ônî dûngo ûlôgun gosîl&emsp;<strong>puko¹:</strong> <em>knife, dagger</em></p>
     <p>xe dûngo bi leknek&emsp;<strong>puko²:</strong> <em>stab</em></p>
     <p>hûwuncul&emsp;<strong>pulasi:</strong> <em>plastic, plastics, malleable</em></p>
@@ -1008,7 +1008,7 @@ common compounds that are used in day-to-day speech.
     <p>tûu în zuwobû&emsp;<strong>reaki²:</strong> <em>reaction</em></p>
     <p>ônî ubôlni&emsp;<strong>rebele¹:</strong> <em>rebel</em></p>
     <p>gûexo kon ubôlni&emsp;<strong>rebele²:</strong> <em>rebellion, revolution</em></p>
-    <p>tûu xe oxon îbolê&emsp;<strong>rebele³:</strong> <em>treason</em></p>
+    <p>tûu xe til îbolê&emsp;<strong>rebele³:</strong> <em>treason</em></p>
     <p>ubôlni&emsp;<strong>rebele⁴:</strong> <em>rebellious</em></p>
     <p>ondo&emsp;<strong>redi¹:</strong> <em>ready, prepare</em></p>
     <p>în yôn&emsp;<strong>redi²:</strong> <em>available</em></p>
@@ -1368,7 +1368,7 @@ common compounds that are used in day-to-day speech.
     <p>kôxentê&emsp;<strong>veka³:</strong> <em>aware</em></p>
     <p>xe li nô tô woyû&emsp;<strong>vela:</strong> <em>sail</em></p>
     <p>hoî&emsp;<strong>ven:</strong> <em>when</em></p>
-    <p>xe wedo oxon munî&emsp;<strong>vende¹:</strong> <em>sell</em></p>
+    <p>xe wedo til munî&emsp;<strong>vende¹:</strong> <em>sell</em></p>
     <p>kon wedo munî&emsp;<strong>vende²:</strong> <em>sale</em></p>
     <p>fûkûxi&emsp;<strong>vendeta:</strong> <em>revenge, vengeful</em></p>
     <p>xe yosten fûkûxi&emsp;<strong>vendeta:</strong> <em>to seek revenge</em></p>
@@ -1380,7 +1380,7 @@ common compounds that are used in day-to-day speech.
     <p>kûmun obokî&emsp;<strong>ventana¹:</strong> <em>window</em></p>
     <p>foko tîkêl&emsp;<strong>ventana²:</strong> <em>mirror</em></p>
     <p>ônî mônîso&emsp;<strong>ventana³:</strong> <em>screen</em></p>
-    <p>nô woyû len&emsp;<strong>vento:</strong> <em>wind, windy</em></p>
+    <p>nô woyû gîôn&emsp;<strong>vento:</strong> <em>wind, windy</em></p>
     <p>leknek&emsp;<strong>vepon:</strong> <em>weapon, arms</em></p>
     <p>xe yôn êo leknek&emsp;<strong>vepon:</strong> <em>to arm</em></p>
     <p>xe dî êo leknek&emsp;<strong>vepon:</strong> <em>weaponize</em></p>
