--- a/docs/works/parallel-speech-corpus.mdx
+++ b/docs/works/parallel-speech-corpus.mdx
@@ -208,11 +208,11 @@ Number of Syllables:
         top priority and ensure punctuality. He expects the car at 5.30 sharp.
     </TabItem>
     <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
-        kûu tûu sôlû kon fiyûxît oxon wûôt yê lono yê hêlxun êto lôtfen. umo
+        kûu tûu sôlû kon fiyûxît til wûôt yê lono yê hêlxun êto lôtfen. umo
         Esbencu yê tîton Cesnut xîwon xe hoî boxô kon wedo yê oûtô xîkô et nonkû
         yê boxô Hîclôû cihôû yôk êfun kînsê yê suhot toû xe ilik lono mutyu. kon
         xîkô nîo li yôk cok mût êfun tîû dus yê suhot xêtî lêkin û nîo kûu sôlû
-        oxon odîgon zuko. kûu belêxu ni misli sonkon solwôc ûn kûu li gufis hôn
+        til odîgon zuko. kûu belêxu ni misli sonkon solwôc ûn kûu li gufis hôn
         cônkôk ye wokut gîk. nîo motsi oûtô hoî êfun niswî dus yê suhot tîû et
         cônkôk.
     </HisyeoText></TabItem>
@@ -473,7 +473,11 @@ Number of syllables:
         corporate rates for academic institutions?
     </TabItem>
     <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
-        TBC
+        nûs sôlû ondo yê kon cûdo côûfon et kônên til mozulis yê cênbô êto. nûs
+        bît buswen fos lufono sî mokon mût boxo bi fos bît cûlosun kon mokon
+        mîoû. li yôk sîokbî til xe wêko côûfon til kon mokon hoî kûncîen bêsu.
+        nûs gonîso yoûtî senwic, oksûn, îskô hôktun bukû, ûn kûôxi. ¿nîmû fuî
+        wîlûwo kûngîyo wîxês til kûngîyo kon bêûdo ko?
     </HisyeoText></TabItem>
     <TabItem value="JPN" label="JPN">
         会議用仕出しのデリバリーに関してお伺いします。料理を盛り付けるための別室
@@ -522,7 +526,11 @@ Number of syllables:
         informed, and awaits arrival.
     </TabItem>
     <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
-        TBC
+        kûu lufono oûtô kon bucono mût onwonî ses yê tîton Cotwik hoî zelen môî.
+        umo nokdo bi lûcik li sî zîgîl hoî xîmu bukû li êo kobût ôlê gonbu nîo
+        kôî li êo yôk nô. xe tuluti tîton onô, bi tôlkî tô tîton Cûlcu. kon gîk
+        yê tîton Bolku li sî bundu til kon xîûfû tîton. ôlê îlê yê cîgîlsu kotonhon
+        et Cesto Gilonzu fisun sî êo ûn ni motsi kon gîk.
     </HisyeoText></TabItem>
     <TabItem value="JPN" label="JPN">
         救急車をお願いします。山田町16番地で、ご年配の男性が氷の上で滑って、足を
@@ -570,6 +578,15 @@ Number of syllables:
         Treasure Island Road. Can you guarantee delivery by 23rd December? I
         should be grateful if you would not disclose who placed the order.
     </TabItem>
+    <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
+        yogô kûngîyo yê kôlmûdul yê sîkîn Kulismus lôtfen. noyo xîwon xe li êo
+        kôlmûdul yê dus dibo yê bîek cencî otôs yê sîkîn Kulismus, tîû dibo yê
+        bîek hûunhu, ûn niswî bîek sûsôn sûît cênbô yê sîkîn Kulismus. onwonî
+        kon gîk li niwos yê ônî cûdo cîgîlsu Belnodô: boxô ses yê tîton Wobî
+        Yokûntîk. ¿nîmû kôî bêmon kon lufono ilik lono dûî dus niswî yê wuhot
+        bole ko? noyo bît li konxo hôn fos nîmû bît yôk fisun êo umo fos li êo
+        kôlmûdul.
+    </HisyeoText></TabItem>
     <TabItem value="JPN" label="JPN">
         もしもし、クリスマスギフトセンターをお願いします。クリスマス・クラッカー
         を10箱、クッキーの詰め合わせを5箱、Lサイズのクリスマスケーキを3台注文し
@@ -619,7 +636,7 @@ Number of syllables:
         force the door open!
     </TabItem>
     <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
-        TBC
+        hoî lono xobêk û noyo li êo but ôlê zinkon fôhon til xe 
     </HisyeoText></TabItem>
     <TabItem value="JPN" label="JPN">
         昨夜、猫を外に出してやろうと玄関を開けたら、とても気持のいい夜だった。新
