--- a/docs/works/shannon-test-sentences.mdx
+++ b/docs/works/shannon-test-sentences.mdx
@@ -60,19 +60,19 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>mocko noyo li nêlô.&emsp;<em>My cat is black.</em></p>
 <p>dôcuî umo yê umo wohî xonluk cûtî onô li kobût.&emsp;<em>The little girl's doll is broken.</em></p>
 <p>noyo bi sodolun li conzodo sunbûlno.&emsp;<em>I usually sleep soundly.</em></p>
-<p>mênyûu onô bi fîkî li nô oxon xe doîcêl umo Zek.&emsp;<em>The children ran after Jack.</em></p>
+<p>mênyûu onô bi fîkî li nô til xe doîcêl umo Zek.&emsp;<em>The children ran after Jack.</em></p>
 <p>noyo kôî kelo cihôû kon bêûdo.&emsp;<em>I can play after school.</em></p>
-<p>nûs li sî nô mût sinsî oxon xe monodo.&emsp;<em>We went to the village for a visit.</em></p>
+<p>nûs li sî nô mût sinsî til xe monodo.&emsp;<em>We went to the village for a visit.</em></p>
 <p>nûs li sî gîk hoî xûto.&emsp;<em>We arrived at the river.</em></p>
-<p>noyo motsi sî bi môcîbo oxon nîmû.&emsp;<em>I have been waiting for you.</em></p>
+<p>noyo motsi sî bi môcîbo til nîmû.&emsp;<em>I have been waiting for you.</em></p>
 <p>ônî mûhoyon onô sityo sî hoî ûnhilun yê môtô onô.&emsp;<em>The campers sat around the fire.</em></p>
 <p>umo wohî xonluk cûtî xe ofek mocko xonluk, sityo sî hoî fêlkonô noyo.&emsp;<em>A little girl with a kitten sat near me.</em></p>
-<p>mênyûu onô motsi sî hoî zinkon oxon motûo moskûl nîo.&emsp;<em>The child waited at the door for her father.</em></p>
+<p>mênyûu onô motsi sî hoî zinkon til motûo moskûl nîo.&emsp;<em>The child waited at the door for her father.</em></p>
 <p>hoî lono xobêk û umo wohî xonluk yê nokdo môî en ozûul yê sinsî onô nocîdo sî mocko xonluk nîo.&emsp;<em>Yesterday the oldest girl in the village lost her kitten.</em></p>
 <p>lôzîc sî nîmû hoî sinsî ôfo ko.&emsp;<em>Were you born in this village?</em></p>
 <p>siskin moskûl nîmû kôî li cifulo bi xôn ko.&emsp;<em>Can your brother dance well?</em></p>
 <p>umo moskûl onô li sî cok ko.&emsp;<em>Did the man leave?</em></p>
-<p>siskin wohî nîmû li gîk oxon nîmû ko.&emsp;<em>Is your sister coming for you?</em></p>
+<p>siskin wohî nîmû li gîk til nîmû ko.&emsp;<em>Is your sister coming for you?</em></p>
 <p>nîmû kôî li gîk hoî lono uklo ko.&emsp;<em>Can you come tomorrow?</em></p>
 <p>ônî niwos fêlkonô li sî cok hôn yogô ûsên cunyû.&emsp;<em>Have the neighbors gone away for the winter?</em></p>
 <p>tîmîok hûnsik bi sodolun kontol hoî hûzon ko.&emsp;<em>Does the robin sing in the rain?</em></p>
@@ -94,7 +94,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>hoî fêlkonô yê gôyu onô yê xûto onô û tîton ni li sî infultîn bi cîes mût kilukû.&emsp;<em>Near the mouth of the river, its course turns sharply towards the East.</em></p>
 <p>gitno dûî tohilôk bûmî iwotê li tigoyo û fenûo sûbôl yê bûmî sêl.&emsp;<em>Between the two lofty mountains lay a fertile valley.</em></p>
 <p>gitno gos kûkmut lîun sî înbolî hûnsik iwotê.&emsp;<em>Among the wheat grew tall red poppies.</em></p>
-<p>ôlê zîzîyo len onô yê êto nomû onô li êo funlît sûn bûmî onô.&emsp;<em>The strong roots of the oak trees were torn from the ground.</em></p>
+<p>ôlê zîzîyo gîôn onô yê êto nomû onô li êo funlît sûn bûmî onô.&emsp;<em>The strong roots of the oak trees were torn from the ground.</em></p>
 <p>bînton lono onô bi sêl gitno tolên nomû dêko sî mênyûu onô xe kelo.&emsp;<em>The sun looked down through the branches upon the children at play.</em></p>
 <p>woyû fîtîkôs ûslêk sôbo ênkômôn misli kon okûlo sûtûô.&emsp;<em>The west wind blew across my face like a friendly caress.</em></p>
 <p>kûldû onô yê doî li sî tuluti sokofû bi tulkolyun.&emsp;<em>The spool of thread rolled across the floor.</em></p>
@@ -110,12 +110,12 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>noyo nocîdo sî lîbû bolce nulun noyo.&emsp;<em>I have lost my blanket.</em></p>
 <p>tîmîok yê wikse cinôbu kôson sî niwos nîo hoî nomû onô yê kûôxi hûnsik sûît.&emsp;<em>A robin has built his nest in the apple tree.</em></p>
 <p>hoî mutyu lono û nûs mokon sî côûfon nûs hoî sôbo tîton.&emsp;<em>At noon we ate our lunch by the roadside.</em></p>
-<p>umo Zônsu kôs sî ônî wêtû oxon umo moskûl xonluk cûtî nîo.&emsp;<em>Mr. Jones made a knife for his little boy.</em></p>
+<p>umo Zônsu kôs sî ônî wêtû til umo moskûl xonluk cûtî nîo.&emsp;<em>Mr. Jones made a knife for his little boy.</em></p>
 <p>êtsô yê ôîtun nîo li xoînbo yê xowosê êto.&emsp;<em>Their voices sound very happy.</em></p>
 <p>lono ôfo li lono dûsul ko.&emsp;<em>Is today Monday?</em></p>
 <p>woloko onô li sî zîgîl sûn nomû ko.&emsp;<em>Have all the leaves fallen from the tree?</em></p>
 <p>nîmû ke ondo sî cizî hoî wokût ko.&emsp;<em>Will you be ready on time?</em></p>
-<p>nîmû ke lufono cukto ôfo oxon noyo ko.&emsp;<em>Will you send this message for me?</em></p>
+<p>nîmû ke lufono cukto ôfo til noyo ko.&emsp;<em>Will you send this message for me?</em></p>
 <p>nîmû bi môcîbo motsi noyo ko.&emsp;<em>Are you waiting for me?</em></p>
 <p>ôfo li lôzîc mocko kut yê zomo kon lôzîc ko.&emsp;<em>Is this the first kitten of the litter?</em></p>
 <p>foko mefûs wowoê ôfo li odigon cênbô hôn nîmû ko.&emsp;<em>Are these shoes too big for you?</em></p>
@@ -131,7 +131,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>umo Zon ûn umo Ilisopet li siskin.&emsp;<em>John and Elizabeth are brother and sister.</em></p>
 <p>nîmû ûn noyo ke li nô ofek xokôn dîzel.&emsp;<em>You and I will go together.</em></p>
 <p>nîo li êo but ôlê môî zinkon ûn kûmun obokî.&emsp;<em>They opened all the doors and windows.</em></p>
-<p>nîo li cûtî lêkin len.&emsp;<em>He is small, but strong.</em></p>
+<p>nîo li cûtî lêkin gîôn.&emsp;<em>He is small, but strong.</em></p>
 <p>mût nomû ôfo tô hîskûnco İngulic somo nomû Ôk yodo nomû Mêpul ko.&emsp;<em>Is this tree an oak or a maple?</em></p>
 <p>okoxu li xoînbo in dêko misli zôî yodo dûsul ko.&emsp;<em>Does the sky look blue or gray?</em></p>
 <p>kûu li nô ofek motûo moskûl yodo motûo wohî.&emsp;<em>Come with your father or mother.</em></p>
@@ -204,7 +204,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>umo moskûl xonluk onô xe okôt sî tômôs onô, li sî cok.&emsp;<em>The boy who brought the book has gone.</em></p>
 <p>ôfo li înbolî onô fos nîo li sî êo kôlmûdul ôlê ni.&emsp;<em>These are the flowers that you ordered.</em></p>
 <p>noyo nocîdo sî tômôs onô fos nîo mût noyo cûdo ni.&emsp;<em>I have lost the book that you gave me.</em></p>
-<p>ônî wêtodû mîcîn xe fuî oûtô xîmu onô, hoî îbûdû bi len sôlû cifû.&emsp;<em>The fisherman who owned the boat now demanded payment.</em></p>
+<p>ônî wêtodû mîcîn xe fuî oûtô xîmu onô, hoî îbûdû bi gîôn sôlû cifû.&emsp;<em>The fisherman who owned the boat now demanded payment.</em></p>
 <p>kûu li gîk hoî fos nîmû li xokûlû.&emsp;<em>Come when you are called.</em></p>
 <p>noyo ke li gô hoî niwos noyo hôn hûzon.&emsp;<em>I shall stay at home if it rains.</em></p>
 <p>hôn fos nîo dêko noyo, nîo nîltûgu sî.&emsp;<em>When he saw me, he stopped.</em></p>
