--- a/docs/works/wicked-prince.mdx
+++ b/docs/works/wicked-prince.mdx
@@ -23,21 +23,21 @@ Andersen](https://en.wikipedia.org/wiki/Hans_Christian_Andersen)
     wohî bûzôk li sî cok ofek lôzîc nungo nîo xe hoî obô nîo, hoî sôbo mônbili
     yê bêlêtê yê kon wôlik môcîbo et yê niwos yê nîo wohî; lêkin bi ûtok hoî
     ulyô û ônî oklumun onô wêtodû nîo wohî ûn hoî fos nîo li sî gîk hoî nîo
-    wohî, û nîo wohî li sî zôhûn oxon kon xowosê xûxok nîo; yûkwoî xûxok bi
+    wohî, û nîo wohî li sî zôhûn til kon xowosê xûxok nîo; yûkwoî xûxok bi
     kônên kôî tûu sî yôk uyo yê lôc eswen en ônî oklumun ôfo foxo. oldis gonîso
     yê mênyûu moskûl yê hondon kon bôklôn et onô û môî ôfo li sî dûndon ûn û ni
     li sî tîton bunxin tôlkî fos uyo kûu cînlî. ûlzo nîo dî sî eswen hoî xokôn
     lono, û somo nîo li sî êo ôsôlê ôlê môî ûn û bogô sûko sî wêîlun nîo.</p>
     <p>nîo okôt êto êto odigon mût niwos sûn sinsî onô fos obûlû sî, ûn û niwos
     nîo bi dîlê dî xe fuî eswen munî fos hoî xûnyu boxô kôî li sumon. nîo
-    kôson sî îlê hosîn oxon xe niwos, xe helgo, ûn xe mokon, ûn û môî xe dêko sî
+    kôson sî îlê hosîn til xe niwos, xe helgo, ûn xe mokon, ûn û môî xe dêko sî
     îlê kûzoû ôfo ûn uyo yê êto wîlûwo, bi oltû bi sûko ôîtun «fos li mênyûu
     moskûl yê hondon kon bôklôn et êto foxo.» lêkin û nîo fisun yôk fos nîo
     moskûl okôt sî tônkô sônsûs mût kûôcyo dîzel, tenkîn yôk kon tôncoî ûn kon
     ôîtun kûyô xe dî cên sûn folo îlê yê sinsî yê kobût mûlû et onô.</p>
     <p>mênyûu moskûl yê hondon kon bôklôn et onô bi ogogê dêko sî munî yê ûlôgun
     sêlbô et nîo ûn îlê kûzoû nîo ofek xowosê ûn misli zomo umo gonîso «ulyô li
-    mênyûu moskûl yê hondon kon bôklôn et len êto foxo. lêkin û noyo kûu fuî
+    mênyûu moskûl yê hondon kon bôklôn et gîôn êto foxo. lêkin û noyo kûu fuî
     eswen — êto eswen. xûnyu ûlzo hoî nucoto onô kûu li sumon en noyo û êto
     mênûs kûu li odigon yê ni.»</p>
     <p>nîo moskûl li sî êo gûexo dên môî kûôcyo uklo nîo li sî êo funsût ôlê
@@ -50,7 +50,7 @@ Andersen](https://en.wikipedia.org/wiki/Hans_Christian_Andersen)
     fîmôsyôs ûn ûnîdû yê niwos moxo yê hondon kon bôklôn; yôk, û nîo moskûl
     xîwon fos bît wêko sî ni hoî îlê kôdus hoî kûnbî kôdus lôîcôk lêkin hôn ôfo
     û ônî hobîyô yê buswêlin kôdus et onô dên nîo moskûl kôto «noî mênyûu moskûl
-    yê hondon kon bôklôn û nîmû li len êto lôîcôk lêkin ûlzo yê ôtsôtot nûs li
+    yê hondon kon bôklôn û nîmû li gîôn êto lôîcôk lêkin ûlzo yê ôtsôtot nûs li
     êto eswen en ûlzo nîmû; nûs kûu li ôsôlê hôn xe fûtsûn hûkun nîmû.»</p>
     <p>«bînê,» li fos mênyûu moskûl yê hondon kon bôklôn kôto sî. «û noyo ke li
     bîlûs dên ôtsôtot nûs bi ûtok lôîcôk.» ûn hôn odigon ûncoî yê nîo moskûl ûn
@@ -75,7 +75,7 @@ Andersen](https://en.wikipedia.org/wiki/Hans_Christian_Andersen)
     sî gîk sûn towê bîbôk onô yê nixîn yê yûkwoî kôdus onô, li sî zîgîl mût oûtô
     onô fos mênyûu moskûl yê hondon kon bôklôn et onô sityo sî, li sî êo môtô
     ôlê ni li sî êo bûgot ôlê ni misli êto elfû yê fîyên bûgot xokôn, cîhun ni
-    bi fîkî bi sêl mût nucoto nûs bi dîzel; nixîn len yê tîmîok kon wêtodû cênbô
+    bi fîkî bi sêl mût nucoto nûs bi dîzel; nixîn gîôn yê tîmîok kon wêtodû cênbô
     li sî funsût, woyû onô ôîtun bi oltû ûnhilun wîk yê mênyûu moskûl yê hondon
     kon bôklôn et onô, ûn û wôlik fêlkonô onô—¿kôs sî ni û wôlik môtô xe dî cên
     sûn sinsî sêkîton ko?—dî sî xîncûon gonzîl misli kistosê xe li êto êto
@@ -88,7 +88,7 @@ Andersen](https://en.wikipedia.org/wiki/Hans_Christian_Andersen)
     <p>«noyo ke li êo funsût ôlê ôtsôtot nûs ze.» li fos mênyûu moskûl yê hondon
     kon bôklôn et onô kôto sî. «noyo bêmon sî ni; û fôlun noyo kûu li mûlû
     ze.»</p>
-    <p>ûn û nîo moskûl lon xêtî ûsên kôson sî êto oûtô kûzoû oxon xe oûtô hoî
+    <p>ûn û nîo moskûl lon xêtî ûsên kôson sî êto oûtô kûzoû til xe oûtô hoî
     woyû, conwêbo sî unbû sûn ûlôgun yê otôs môî et xe li êo kobût ôlê bêlêtê
     onô yê sêmoi tô. nîo moskûl gomî ônî oklumun sûn môî kûôcyo lon mîkdol êto
     fos hôn nîo bît li fos gitno xokôn dîzel wêko, nîo doknû sî boxô onô yê êto
@@ -100,7 +100,7 @@ Andersen](https://en.wikipedia.org/wiki/Hans_Christian_Andersen)
     nîo moskûl sûn ônî ogolol ni ondo sî xe kôs oklumun lêkin û nîo moskûl bi
     tôlkî okûlo sî woyû onô xobo sî yôk mûxî onô. bînê nîo moskûl hûkun sî fos
     foko yoldûn yê nîo moskûl okôt ônî doknû yê êto wîlûwo doknû nîo moskûl tô
-    ni oxon fos mûxî onô cihôû îbûdû kôî fuî yôk zîcoû onô yê xe li gîk sî
+    ni til fos mûxî onô cihôû îbûdû kôî fuî yôk zîcoû onô yê xe li gîk sî
     hoî nîo moskûl. foko yoldûn onô fûtsûn sî hûkun yê nîo moskûl lêkin kut mûxî
     ônî kut wêko sî cizî ni hoî lîmîen yê kut ônî doknû onô li sî nô bomoge
     homûs mût cîkînîl yê mênyûu moskûl yê hondon kon bôklôn et onô dûngo sî nîo
