--- a/docs/language/word_types/verbs.mdx
+++ b/docs/language/word_types/verbs.mdx
@@ -82,7 +82,7 @@ frame the predicate of a question, it has the effect of asking for permission.
     <p>noyo kôî li nô mût kôndodû onô lêkin noyo gôcîdon sî yôk bi ôhêl.&emsp;<em>I might go to the party, but I haven't decided yet.</em></p>
     <p>noyo kôî li gô hoî sityo kûldû lêkin noyo bi môcîbo fôlun fos wêîlun mût noyo misli umo wohî.&emsp;<em>I might be in a wheelchair, but I still want to be treated as a lady.</em></p>
     <p>noyo kôî gomî bîek botuk sûît fêlcîn.&emsp;<em>Might I take the last biscuit?</em></p>
-    <p>nûs kôî buswen uyo xe li len eswen yoûtî cî.&emsp;<em>Yeah, I think we might need something a bit sturdier.</em></p>
+    <p>nûs kôî buswen uyo xe li gîôn eswen yoûtî cî.&emsp;<em>Yeah, I think we might need something a bit sturdier.</em></p>
     <p>nîmû kôî tenkîn ulyô ko.&emsp;<em>Can you hear that?</em></p>
     <p>nîo kôî kôto tô hîskûnco Ingulic, Vulonsê, ûn Dôic.&emsp;<em>She can speak English, French, and German.</em></p>
 </HisyeoTabs>
@@ -94,7 +94,7 @@ predicate occurring is dependent on some other circumstance that is either
 explicitly described or implied.
 
 <HisyeoTabs>
-    <p>hôn fos noyo bît li bîlûs hoî xe kôntêsto oxon yokûntîk, û noyo bît cûdo fun dûî munî mût kûngîyo yôûlî.&emsp;<em>If I won the lottery, I would give half the money to charity.</em></p>
+    <p>hôn fos noyo bît li bîlûs hoî xe kôntêsto til yokûntîk, û noyo bît cûdo fun dûî munî mût kûngîyo yôûlî.&emsp;<em>If I won the lottery, I would give half the money to charity.</em></p>
     <p>noyo bît yûbik xe li nô monodo.&emsp;<em>I would love to come and visit.</em></p>
     <p>kûu dêko bîek sûît yê sobôlê xôn êto ze. noyo bît mokon môî ulyô bi mûlû ze.&emsp;<em>Look at that yummy cake! I would eat that all up!</em></p>
     <p>noyo mût nîmû bît sôlû xe sityo bi koli.&emsp;<em>I would ask you all to sit down.</em></p>
