--- a/docs/lessons/greetings-salutations.mdx
+++ b/docs/lessons/greetings-salutations.mdx
@@ -50,7 +50,7 @@ create new friendships.
 
 <HisyeoTabs>
     <p>noyo monodo nîo hoî suhot dus.&emsp;<em>I am meeting them at 10</em></p>
-    <p>nûs kûu monodo oxon côûfon bitûn cî.&emsp;<em>Let's meet for supper, sound good?</em></p>
+    <p>nûs kûu monodo til côûfon bitûn cî.&emsp;<em>Let's meet for supper, sound good?</em></p>
     <p>nîmû fôlun xe monodo noyo hoî cihôû ko.&emsp;<em>Do you want to meet me later?</em></p>
 </HisyeoTabs>
 
@@ -101,7 +101,7 @@ that acknowledges the respect given or reciprocates it.
     <p>li konxo hôn nîmû.<em>Thank you.</em></p>
     <p>li konxo êto hôn nîmû.<em>Many thanks to you.</em></p>
     <p>li konxo bi êto lôîcôk.&emsp;<em>Thank you so much.</em></p>
-    <p>oxon noyo ûtok.&emsp;<em>For me also.</em></p>
+    <p>til noyo ûtok.&emsp;<em>For me also.</em></p>
     <p>li xôn û xe monodo nîmû ûtok.&emsp;<em>It is nice to meet you too.</em></p>
 </HisyeoTabs>
 
@@ -212,10 +212,10 @@ Even if the person isn't able to accept, it's always seen as a sign of respect
 and admiration.
 
 <HisyeoTabs>
-    <p>umo Dominik xokûlû si umo Kinen oxon kon kôto yê mocko.&emsp;<em>Dominick called Keenan for a conversation about cats.</em></p>
+    <p>umo Dominik xokûlû si umo Kinen til kon kôto yê mocko.&emsp;<em>Dominick called Keenan for a conversation about cats.</em></p>
     <p>nîmû ke xokûlû umo Kulisti mût (fos li nô mut) kôndodû onô ko.&emsp;<em>Will you invite Christie to (go to) the party?</em></p>
     <p>noyo bi centik xokûlû nîmû mût côûfon kon môtô yê comen soden yê niwos noyo&emsp;<em>I formally invite you to my backyard barbecue.</em></p>
-    <p>umo Gulolîo xokûlû umo Bilondî oxon xe xokûlû nîo mût fos tûu kon mûhoyon. &emsp;<em>Gloria called Brandy to invite her to go camping.</em></p>
+    <p>umo Gulolîo xokûlû umo Bilondî til xe xokûlû nîo mût fos tûu kon mûhoyon. &emsp;<em>Gloria called Brandy to invite her to go camping.</em></p>
 </HisyeoTabs>
 
 :::tip Grammar Used
@@ -226,7 +226,7 @@ invited someone to a conversation electronically. The direct object of the verb
 is the invited patient. The indirect object represents what you are inviting the
 patient to partipcipate in. It is supplied using <HisyeoWord is='mût'/> but if
 the purpose of the invitation is the same as the invited action, you can use the
-preposition <HisyeoWord is='oxon'/>.
+preposition <HisyeoWord is='til'/>.
 
 :::
 
