--- a/docs/lessons/small-talk.mdx
+++ b/docs/lessons/small-talk.mdx
@@ -215,15 +215,15 @@ expressions and responses you can use.
 Here are some things you can say to show your condolences.
 
 <HisyeoTabs>
-    <p>ôlê noyo bi len li êo kûyô û xe tenkîn kon nocîdo nîmû ze.&emsp;<em>I am extremely saddened from hearing about your loss!</em></p>
-    <p>(noyo) (mût nîmû) (cûdo) kon zûtô yê zîlyoîs môî et noyo oxon kon nocîdo êto nîmû.&emsp;<em>My deepest sympathy at your great loss.</em></p>
-    <p>kûu fisun fos noyo hofo oxon nîmû lôtfen.&emsp;<em>Please know that I am praying for you.</em></p>
+    <p>ôlê noyo bi gîôn li êo kûyô û xe tenkîn kon nocîdo nîmû ze.&emsp;<em>I am extremely saddened from hearing about your loss!</em></p>
+    <p>(noyo) (mût nîmû) (cûdo) kon zûtô yê zîlyoîs môî et noyo til kon nocîdo êto nîmû.&emsp;<em>My deepest sympathy at your great loss.</em></p>
+    <p>kûu fisun fos noyo hofo til nîmû lôtfen.&emsp;<em>Please know that I am praying for you.</em></p>
     <p>(noyo) kôî wêko yôk cizî hoî êtsô nîmû.&emsp;<em>I cannot put myself in your situation.</em></p>
     <p>(noyo) fisun fos li xoînbo û fos uyo li odigon kutin hoî îbûdû cônkôk.&emsp;<em>I know things seem too difficult right now.</em></p>
     <p>kûu dênêmêk xe ogolol xîwon.&emsp;<em>Try to hang on to hope.</em></p>
     <p>(mût noyo) kûu hobîyô hôn fos nîmû bît buswen xe kôto yodo kut umo fos li êo nonto ofek.&emsp;<em>Let me know if you need to talk or just someone to cry with.</em></p>
-    <p>(noyo) fisun fos li xûnyu fos noyo kôî kôto oxon fos ôlê tônkô nîmû li êo fonmot.&emsp;<em>I know there is nothing I can say to make your pain go away.</em></p>
-    <p>kûu fisun fos noyo hoî môî wokût ke li gô hoî ulyô oxon nîmû.&emsp;<em>Please know that I will always be there for you.</em></p>
+    <p>(noyo) fisun fos li xûnyu fos noyo kôî kôto til fos ôlê tônkô nîmû li êo fonmot.&emsp;<em>I know there is nothing I can say to make your pain go away.</em></p>
+    <p>kûu fisun fos noyo hoî môî wokût ke li gô hoî ulyô til nîmû.&emsp;<em>Please know that I will always be there for you.</em></p>
 </HisyeoTabs>
 
 ## Weather
@@ -233,7 +233,7 @@ know what they're doing anymore.
 
 <HisyeoTabs>
     <p>bi zik û kêlôs li sî gô hoî boxô nîmû?&emsp;<em>How has the weather been in your neck of the woods?</em></p>
-    <p>nîmû fuî sî kônên oxon xe li gô hoî wokto ko.&emsp;<em>Have you had a chance to get outside today?</em></p>
+    <p>nîmû fuî sî kônên til xe li gô hoî wokto ko.&emsp;<em>Have you had a chance to get outside today?</em></p>
     <p>kûu wuîtsî lîmîen hôn fos nîmû fôlun xe uskîfo hûzon onô.&emsp;<em>Stay indoors if you want to avoid the rain.</em></p>
     <p>li hûzon bûgot ûn tenkîn bôkbûn lêkin û noyo dêko yôk ozûul kûon bôkbûn.&emsp;<em>There is heavy rain and thunder but I didn't see any lightning.</em></p>
     <p>li sî fûongok yê êto longi cihôû bôkbûn onô xe hoî lono unbol.&emsp;<em>There was a beautiful rainbow after the storm on Saturday.</em></p>
